my first commit

--- a/notebooks/00_data_split.ipynb
+++ b/notebooks/00_data_split.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4ab62c3a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/Users/riadanas/Desktop/housing regression MLE/data/raw/untouched_raw_original.csv')"
+    "df = pd.read_csv('/home/ldaquan1996/Regression_ML_EndtoEnd/data/raw/untouched_raw_original.csv')"
    ]
   },
   {
@@ -1018,7 +1018,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
