--- a/notebooks/06_hyperparameter_tuning_MFLow.ipynb
+++ b/notebooks/06_hyperparameter_tuning_MFLow.ipynb
@@ -29,9 +29,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/riadanas/Desktop/housing regression MLE/.venv/bin/python\n",
+      "/home/ldaquan1996/Regression_ML_EndtoEnd/.venv/bin/python\n",
       "3.0.4\n",
-      "/Users/riadanas/Desktop/housing regression MLE/.venv/lib/python3.11/site-packages/xgboost/__init__.py\n"
+      "/home/ldaquan1996/Regression_ML_EndtoEnd/.venv/lib/python3.11/site-packages/xgboost/__init__.py\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/riadanas/Desktop/housing regression MLE/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/ldaquan1996/Regression_ML_EndtoEnd/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -89,8 +89,8 @@
     "# ==============================================\n",
     "# 2. Load processed datasets\n",
     "# ==============================================\n",
-    "train_df = pd.read_csv(\"/Users/riadanas/Desktop/housing regression MLE/data/processed/feature_engineered_train.csv\")\n",
-    "eval_df  = pd.read_csv(\"/Users/riadanas/Desktop/housing regression MLE/data/processed/feature_engineered_eval.csv\")\n",
+    "train_df = pd.read_csv(\"/home/ldaquan1996/Regression_ML_EndtoEnd/data/processed/feature_engineered_train.csv\")\n",
+    "eval_df  = pd.read_csv(\"/home/ldaquan1996/Regression_ML_EndtoEnd/data/processed/feature_engineered_eval.csv\")\n",
     "\n",
     "\n",
     "# Define target + features\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "fadb78cd",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "4ed4b5f5",
    "metadata": {},
    "outputs": [
@@ -154,35 +154,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2025-09-23 13:57:30,788] A new study created in memory with name: no-name-da5b8655-4c4b-43bb-8c2b-4d7782248669\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[I 2025-09-23 13:57:36,431] Trial 0 finished with value: 81247.90176944395 and parameters: {'n_estimators': 554, 'max_depth': 3, 'learning_rate': 0.07915494836067737, 'subsample': 0.8137178495467532, 'colsample_bytree': 0.9247348183476795, 'min_child_weight': 1, 'gamma': 0.4037929929888301, 'reg_alpha': 2.3441361115415284e-06, 'reg_lambda': 0.8510701474431667}. Best is trial 0 with value: 81247.90176944395.\n",
-      "[I 2025-09-23 13:57:49,043] Trial 1 finished with value: 70806.44227307769 and parameters: {'n_estimators': 595, 'max_depth': 9, 'learning_rate': 0.17279473643326876, 'subsample': 0.8355873559432827, 'colsample_bytree': 0.5810251128079091, 'min_child_weight': 10, 'gamma': 4.677804213446263, 'reg_alpha': 9.351424858977932e-06, 'reg_lambda': 0.00013022332082416647}. Best is trial 1 with value: 70806.44227307769.\n",
-      "[I 2025-09-23 13:58:04,550] Trial 2 finished with value: 71839.04852288461 and parameters: {'n_estimators': 535, 'max_depth': 10, 'learning_rate': 0.12213106636341217, 'subsample': 0.7344354271267435, 'colsample_bytree': 0.888773698584888, 'min_child_weight': 8, 'gamma': 0.10388393159469211, 'reg_alpha': 9.962621816601058e-05, 'reg_lambda': 1.7083853978635344e-05}. Best is trial 1 with value: 70806.44227307769.\n",
-      "[I 2025-09-23 13:58:15,049] Trial 3 finished with value: 72740.06002815528 and parameters: {'n_estimators': 544, 'max_depth': 8, 'learning_rate': 0.040368140777994076, 'subsample': 0.7476267629169737, 'colsample_bytree': 0.8720383466030115, 'min_child_weight': 5, 'gamma': 2.0542739571450137, 'reg_alpha': 6.048661802709202e-06, 'reg_lambda': 0.0009113446738525107}. Best is trial 1 with value: 70806.44227307769.\n",
-      "[I 2025-09-23 13:58:25,095] Trial 4 finished with value: 68544.69022911381 and parameters: {'n_estimators': 446, 'max_depth': 9, 'learning_rate': 0.028458141898131586, 'subsample': 0.8970372115260677, 'colsample_bytree': 0.6867337932853605, 'min_child_weight': 9, 'gamma': 2.804950513221669, 'reg_alpha': 1.1884539469908749e-07, 'reg_lambda': 1.7062403052654664}. Best is trial 4 with value: 68544.69022911381.\n",
-      "[I 2025-09-23 13:58:34,857] Trial 5 finished with value: 74586.69093978665 and parameters: {'n_estimators': 968, 'max_depth': 4, 'learning_rate': 0.0339726288900494, 'subsample': 0.8152413106211902, 'colsample_bytree': 0.7311124930187773, 'min_child_weight': 1, 'gamma': 4.672043552819015, 'reg_alpha': 0.027603006292237352, 'reg_lambda': 0.018534611904643773}. Best is trial 4 with value: 68544.69022911381.\n",
-      "[I 2025-09-23 13:58:53,851] Trial 6 finished with value: 75994.12965790062 and parameters: {'n_estimators': 847, 'max_depth': 9, 'learning_rate': 0.24634804305703292, 'subsample': 0.6829911503881054, 'colsample_bytree': 0.618746289655721, 'min_child_weight': 2, 'gamma': 3.987719689920624, 'reg_alpha': 0.06616975136232141, 'reg_lambda': 1.0559346731134678}. Best is trial 4 with value: 68544.69022911381.\n",
-      "[I 2025-09-23 13:59:01,813] Trial 7 finished with value: 74410.76206629591 and parameters: {'n_estimators': 318, 'max_depth': 9, 'learning_rate': 0.18845237306373724, 'subsample': 0.7786959914212636, 'colsample_bytree': 0.9557063240273638, 'min_child_weight': 1, 'gamma': 0.5827806030717847, 'reg_alpha': 2.9313505001091114e-07, 'reg_lambda': 9.875608534545588e-07}. Best is trial 4 with value: 68544.69022911381.\n",
-      "[I 2025-09-23 13:59:05,841] Trial 8 finished with value: 75980.23107476301 and parameters: {'n_estimators': 259, 'max_depth': 6, 'learning_rate': 0.06480175297349004, 'subsample': 0.6649510305101487, 'colsample_bytree': 0.946527873103504, 'min_child_weight': 4, 'gamma': 0.20395100673438082, 'reg_alpha': 1.7811170544013453e-08, 'reg_lambda': 2.2053695998877684e-07}. Best is trial 4 with value: 68544.69022911381.\n",
-      "[I 2025-09-23 13:59:10,306] Trial 9 finished with value: 70247.35622255465 and parameters: {'n_estimators': 320, 'max_depth': 6, 'learning_rate': 0.07166579602616285, 'subsample': 0.6550748096723962, 'colsample_bytree': 0.5204120738919883, 'min_child_weight': 5, 'gamma': 0.5530265874966722, 'reg_alpha': 0.03986353661044713, 'reg_lambda': 0.011858556207159823}. Best is trial 4 with value: 68544.69022911381.\n",
-      "[I 2025-09-23 13:59:21,851] Trial 10 finished with value: 72241.26503484345 and parameters: {'n_estimators': 747, 'max_depth': 7, 'learning_rate': 0.011855082341202187, 'subsample': 0.9867376575886183, 'colsample_bytree': 0.7472508309473854, 'min_child_weight': 8, 'gamma': 2.8927855198865915, 'reg_alpha': 1.7523197598704765e-08, 'reg_lambda': 6.675705939209017}. Best is trial 4 with value: 68544.69022911381.\n",
-      "[I 2025-09-23 13:59:27,083] Trial 11 finished with value: 74017.47056994433 and parameters: {'n_estimators': 355, 'max_depth': 6, 'learning_rate': 0.02244438541120768, 'subsample': 0.5705071524617104, 'colsample_bytree': 0.50532911166094, 'min_child_weight': 7, 'gamma': 1.8698577587764387, 'reg_alpha': 8.521962970288836, 'reg_lambda': 0.01877902122006826}. Best is trial 4 with value: 68544.69022911381.\n",
-      "[I 2025-09-23 13:59:32,897] Trial 12 finished with value: 81223.01363727795 and parameters: {'n_estimators': 415, 'max_depth': 5, 'learning_rate': 0.015268747854054238, 'subsample': 0.9500940831780921, 'colsample_bytree': 0.6678729123940514, 'min_child_weight': 4, 'gamma': 3.071292305914608, 'reg_alpha': 0.004715890216879514, 'reg_lambda': 0.03362087566955244}. Best is trial 4 with value: 68544.69022911381.\n",
-      "[I 2025-09-23 13:59:40,370] Trial 13 finished with value: 71986.85545682478 and parameters: {'n_estimators': 437, 'max_depth': 7, 'learning_rate': 0.026594430804303144, 'subsample': 0.5238908475022437, 'colsample_bytree': 0.8137229346480591, 'min_child_weight': 10, 'gamma': 1.3435008882542052, 'reg_alpha': 3.9421427328428527, 'reg_lambda': 0.15103990023068561}. Best is trial 4 with value: 68544.69022911381.\n",
-      "[I 2025-09-23 13:59:43,160] Trial 14 finished with value: 76848.86415384215 and parameters: {'n_estimators': 204, 'max_depth': 5, 'learning_rate': 0.05492926733763265, 'subsample': 0.9000612471391017, 'colsample_bytree': 0.5688566934580195, 'min_child_weight': 6, 'gamma': 3.4730072864640427, 'reg_alpha': 0.0007417435790779168, 'reg_lambda': 0.0008358764624822283}. Best is trial 4 with value: 68544.69022911381.\n"
+      "[I 2026-01-06 00:04:20,661] A new study created in memory with name: no-name-a6e93288-9a13-49b9-bab7-a05245638cd7\n",
+      "[I 2026-01-06 00:05:05,785] Trial 0 finished with value: 69430.44252617517 and parameters: {'n_estimators': 801, 'max_depth': 9, 'learning_rate': 0.12353983135004505, 'subsample': 0.6551121103069528, 'colsample_bytree': 0.5549216217520294, 'min_child_weight': 8, 'gamma': 3.973627689327381, 'reg_alpha': 0.0031570329044474273, 'reg_lambda': 4.469821609475818}. Best is trial 0 with value: 69430.44252617517.\n",
+      "[I 2026-01-06 00:05:19,185] Trial 1 finished with value: 72496.11187904642 and parameters: {'n_estimators': 417, 'max_depth': 6, 'learning_rate': 0.09538174886894928, 'subsample': 0.6111942777513217, 'colsample_bytree': 0.8846190574698031, 'min_child_weight': 1, 'gamma': 2.7635590373428185, 'reg_alpha': 0.003474724751867644, 'reg_lambda': 1.6073038306155039e-06}. Best is trial 0 with value: 69430.44252617517.\n",
+      "[I 2026-01-06 00:05:30,661] Trial 2 finished with value: 83595.49131092073 and parameters: {'n_estimators': 458, 'max_depth': 4, 'learning_rate': 0.019496965108187003, 'subsample': 0.6136974203718626, 'colsample_bytree': 0.5641041367113253, 'min_child_weight': 6, 'gamma': 1.1325987561733786, 'reg_alpha': 0.3591974532739865, 'reg_lambda': 0.0030749981749612163}. Best is trial 0 with value: 69430.44252617517.\n",
+      "[I 2026-01-06 00:05:50,780] Trial 3 finished with value: 75595.15640823239 and parameters: {'n_estimators': 645, 'max_depth': 6, 'learning_rate': 0.15968156112607593, 'subsample': 0.9978960226918971, 'colsample_bytree': 0.7470699398938301, 'min_child_weight': 8, 'gamma': 0.5024780064163231, 'reg_alpha': 5.802200900684153e-07, 'reg_lambda': 6.481703859743653e-05}. Best is trial 0 with value: 69430.44252617517.\n",
+      "[I 2026-01-06 00:06:24,766] Trial 4 finished with value: 72555.45160102547 and parameters: {'n_estimators': 402, 'max_depth': 9, 'learning_rate': 0.011475287419966831, 'subsample': 0.515195543055704, 'colsample_bytree': 0.7161281557980435, 'min_child_weight': 1, 'gamma': 0.7834543841078412, 'reg_alpha': 2.2860017720719325e-06, 'reg_lambda': 1.6529426126488784e-06}. Best is trial 0 with value: 69430.44252617517.\n",
+      "[I 2026-01-06 00:07:31,304] Trial 5 finished with value: 69268.3262770749 and parameters: {'n_estimators': 1000, 'max_depth': 9, 'learning_rate': 0.014329176616136276, 'subsample': 0.6149926738286028, 'colsample_bytree': 0.6309519275180457, 'min_child_weight': 1, 'gamma': 2.618785161514251, 'reg_alpha': 0.0003375972647999347, 'reg_lambda': 8.015446304217363e-07}. Best is trial 5 with value: 69268.3262770749.\n",
+      "[I 2026-01-06 00:07:41,529] Trial 6 finished with value: 78335.76857071214 and parameters: {'n_estimators': 611, 'max_depth': 3, 'learning_rate': 0.05139123677451859, 'subsample': 0.5549071732161039, 'colsample_bytree': 0.7056479416628412, 'min_child_weight': 4, 'gamma': 1.7668996119813762, 'reg_alpha': 3.100840958524594, 'reg_lambda': 1.4229485506184168e-07}. Best is trial 5 with value: 69268.3262770749.\n",
+      "[I 2026-01-06 00:08:07,166] Trial 7 finished with value: 71538.27809462359 and parameters: {'n_estimators': 668, 'max_depth': 8, 'learning_rate': 0.2139417663331973, 'subsample': 0.6601421388892157, 'colsample_bytree': 0.5566832721077533, 'min_child_weight': 9, 'gamma': 2.7775766396788324, 'reg_alpha': 0.00043044442077391223, 'reg_lambda': 6.833979198665075e-07}. Best is trial 5 with value: 69268.3262770749.\n",
+      "[I 2026-01-06 00:08:28,694] Trial 8 finished with value: 73607.1398585839 and parameters: {'n_estimators': 415, 'max_depth': 8, 'learning_rate': 0.010232697784520328, 'subsample': 0.618086961694535, 'colsample_bytree': 0.7432839078923559, 'min_child_weight': 7, 'gamma': 3.6247368544687926, 'reg_alpha': 1.7433541991646475, 'reg_lambda': 2.2755467501782898e-08}. Best is trial 5 with value: 69268.3262770749.\n",
+      "[I 2026-01-06 00:09:04,548] Trial 9 finished with value: 73109.8125268153 and parameters: {'n_estimators': 801, 'max_depth': 8, 'learning_rate': 0.10753572267598269, 'subsample': 0.6037269423330852, 'colsample_bytree': 0.9226905803931531, 'min_child_weight': 1, 'gamma': 1.4802347415004031, 'reg_alpha': 0.03460903888359286, 'reg_lambda': 8.61940834932819}. Best is trial 5 with value: 69268.3262770749.\n",
+      "[I 2026-01-06 00:10:21,003] Trial 10 finished with value: 70849.23176105344 and parameters: {'n_estimators': 981, 'max_depth': 10, 'learning_rate': 0.029980067456139247, 'subsample': 0.7972638693708622, 'colsample_bytree': 0.6198040271354449, 'min_child_weight': 4, 'gamma': 4.976771418128128, 'reg_alpha': 1.167007669854121e-05, 'reg_lambda': 0.0013609119838796481}. Best is trial 5 with value: 69268.3262770749.\n",
+      "[I 2026-01-06 00:11:30,142] Trial 11 finished with value: 69121.29929702079 and parameters: {'n_estimators': 990, 'max_depth': 10, 'learning_rate': 0.05011673985228474, 'subsample': 0.7540920768280955, 'colsample_bytree': 0.5149026944528615, 'min_child_weight': 10, 'gamma': 3.7374531384085206, 'reg_alpha': 1.1292850289188117e-08, 'reg_lambda': 7.203762009316714}. Best is trial 11 with value: 69121.29929702079.\n",
+      "[I 2026-01-06 00:12:37,983] Trial 12 finished with value: 69689.5712742548 and parameters: {'n_estimators': 972, 'max_depth': 10, 'learning_rate': 0.043207113260983775, 'subsample': 0.7906180836969611, 'colsample_bytree': 0.5046431581514244, 'min_child_weight': 10, 'gamma': 3.507036829815373, 'reg_alpha': 4.204614846246828e-08, 'reg_lambda': 0.10862956533636575}. Best is trial 11 with value: 69121.29929702079.\n",
+      "[I 2026-01-06 00:13:44,718] Trial 13 finished with value: 70084.39570638322 and parameters: {'n_estimators': 864, 'max_depth': 10, 'learning_rate': 0.0211294553287012, 'subsample': 0.7286866963249704, 'colsample_bytree': 0.6368106055715277, 'min_child_weight': 4, 'gamma': 4.513405528326939, 'reg_alpha': 2.7907163155345997e-05, 'reg_lambda': 9.899076999702107e-05}. Best is trial 11 with value: 69121.29929702079.\n",
+      "[I 2026-01-06 00:13:57,077] Trial 14 finished with value: 73700.48456307952 and parameters: {'n_estimators': 272, 'max_depth': 7, 'learning_rate': 0.017263578923913576, 'subsample': 0.8921776145539031, 'colsample_bytree': 0.63842583823976, 'min_child_weight': 3, 'gamma': 2.2015852098942057, 'reg_alpha': 4.0819957461211154e-08, 'reg_lambda': 0.19599650412362127}. Best is trial 11 with value: 69121.29929702079.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best params: {'n_estimators': 446, 'max_depth': 9, 'learning_rate': 0.028458141898131586, 'subsample': 0.8970372115260677, 'colsample_bytree': 0.6867337932853605, 'min_child_weight': 9, 'gamma': 2.804950513221669, 'reg_alpha': 1.1884539469908749e-07, 'reg_lambda': 1.7062403052654664}\n"
+      "Best params: {'n_estimators': 990, 'max_depth': 10, 'learning_rate': 0.05011673985228474, 'subsample': 0.7540920768280955, 'colsample_bytree': 0.5149026944528615, 'min_child_weight': 10, 'gamma': 3.7374531384085206, 'reg_alpha': 1.1292850289188117e-08, 'reg_lambda': 7.203762009316714}\n"
      ]
     }
    ],
@@ -191,7 +185,7 @@
     "# 4. Run Optuna study with MLflow\n",
     "# ==============================================\n",
     "# Force MLflow to always use the root project mlruns folder\n",
-    "mlflow.set_tracking_uri(\"/Users/riadanas/Desktop/housing regression MLE/mlruns\")\n",
+    "mlflow.set_tracking_uri(\"/home/ldaquan1996/Regression_ML_EndtoEnd/mlruns\")\n",
     "mlflow.set_experiment(\"xgboost_optuna_housing\")\n",
     "\n",
     "study = optuna.create_study(direction=\"minimize\")\n",
@@ -202,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "21b8c223",
    "metadata": {},
    "outputs": [
@@ -211,19 +205,19 @@
      "output_type": "stream",
      "text": [
       "Final tuned model performance:\n",
-      "MAE: 31472.002185832847\n",
-      "RMSE: 70459.0823185452\n",
-      "R²: 0.9616351065691122\n"
+      "MAE: 30910.164630071213\n",
+      "RMSE: 69308.05255695073\n",
+      "R²: 0.9628783370426398\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/riadanas/Desktop/housing regression MLE/.venv/lib/python3.11/site-packages/xgboost/sklearn.py:1028: UserWarning: [13:59:53] WARNING: /Users/runner/work/xgboost/xgboost/src/c_api/c_api.cc:1427: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
+      "/home/ldaquan1996/Regression_ML_EndtoEnd/.venv/lib/python3.11/site-packages/xgboost/sklearn.py:1028: UserWarning: [00:15:05] WARNING: /workspace/src/c_api/c_api.cc:1427: Saving model in the UBJSON format as default.  You can use file extension: `json`, `ubj` or `deprecated` to choose between formats.\n",
       "  self.get_booster().save_model(fname)\n",
-      "2025/09/23 13:59:56 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
-      "\u001b[31m2025/09/23 13:59:56 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\u001b[0m\n"
+      "2026/01/06 00:15:12 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "\u001b[31m2026/01/06 00:15:12 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\u001b[0m\n"
      ]
     }
    ],
@@ -278,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
